@@ -6,6 +6,7 @@ Changes in 1.4.4-stable:
  o expose bufferevent_setwatermark via header files and fix high watermark on read
  o fix a bug in bufferevent read water marks and add a test for them
  o introduce bufferevent_setcb and bufferevent_setfd to allow better manipulation of bufferevents
+ o use libevent's internal timercmp on all platforms, to avoid bugs on old platforms where timercmp(a,b,<=) is buggy.
 
 
 Changes in 1.4.3-stable:
